src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBTextureStorage_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBTextureStorage_StringErrorContext.class */
public final class ARBTextureStorage_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glTexStorage1D(IIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureStorageErrorContext");
        methods.put("glTexStorage2D(IIIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureStorageErrorContext");
        methods.put("glTexStorage3D(IIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureStorageErrorContext");
        methods.put("glTextureStorage1DEXT(IIIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureStorageErrorContext");
        methods.put("glTextureStorage2DEXT(IIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureStorageErrorContext");
        methods.put("glTextureStorage3DEXT(IIIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTextureStorageErrorContext");
        return methods;
    }
}
